# VolumeCompression

./: .gitignore  CMakeLists.txt  README.MD
include/VoxelCompression/utils/: NvCodecUtils.h  NvEncoderCLIOptions.h  RawStream.hpp  TifHelper.hpp  VolumeReader.h  VoxelResample.h  util.h
include/VoxelCompression/voxel_compress/: VoxelCmpDS.h  VoxelCompress.h
include/VoxelCompression/voxel_uncompress/: VoxelUncompress.h
src/: CMakeLists.txt
src/Utils/: TifHelper.cpp
src/compress/: CMakeLists.txt  iencoder.h  voxel_compress.cpp
src/compress/nvenc/: CMakeLists.txt  NvEncoder.cpp  NvEncoder.h
src/compress/nvenc/CUDA/: CMakeLists.txt  NvEncoderCuda.h
src/uncompress/: CMakeLists.txt  voxel_uncompress.cpp
src/uncompress/nvdec/: NvDecoder.cpp  NvDecoder.h
test/: CMakeLists.txt  test_block_volume_cmp.cpp  test_compress.cpp  test_cuda_gl.cpp  test_extract_block_from_h264.cpp  test_ffmpeg.cpp  test_gen_bmp.cpp  test_json.cpp  test_libtiff.cpp  test_merge_tif.cpp  test_opts.cpp  test_raw2tif.cpp  test_raw_diff.cpp  test_read_tif_from_raw.cpp  test_struct_size.cpp  test_tif2h264.cpp  test_tif2raw.cpp  test_tif_same.cpp  test_uncompress.cpp  test_volume_value.cpp
tools/: BlockVolumeCmp.cpp  BlockVolumeUncmp.cpp  BlockedVolumeCmp.cpp  CMakeLists.txt  ExtractBlockFromH264Volume.cpp  ExtractBlockFromRawVolume.cpp  README.MD  VolumeResample.cpp  VolumeTifToH264.cpp  VolumeTifToRaw.cpp  VolumeToH264.cpp
